--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Деснолсофт</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -26,9 +27,9 @@
                 </div>
                 <nav class="main-nav">
                     <ul class="main-nav__items">
-                        <li class="main-nav__item"><a href="#">Ваши возможности</a></li>
-                        <li class="main-nav__item"><a href="#">Наш опыт</a></li>
-                        <li class="main-nav__item"><a href="#">Обратиться к нам</a></li>
+                        <li class="main-nav__item"><a href="#yourOpportunities" >Ваши возможности</a></li>
+                        <li class="main-nav__item"><a href="#ourExperience" >Наш опыт</a></li>
+                        <li class="main-nav__item"><a href="#contactUs" >Обратиться к нам</a></li>
                     </ul>
                 </nav>
             </div>
@@ -199,7 +200,7 @@
             </div>
         </div>
     </section>
-    <section class="possibilities-app">
+    <section class="possibilities-app" id="yourOpportunities">
         <div class="container">
             <div class="row">
                 <div class="possibilities-app__title title">
@@ -392,7 +393,7 @@
     <section class="support_month">
         1 месяц поддержки - бесплатно!
     </section>
-    <section class="advantage">
+    <section class="advantage" id="ourExperience">
         <div class="container">
             <div class="row">
                 <div class="advantage-title title">наш опыт - ваше премущество</div>
@@ -466,7 +467,7 @@
             </div>
         </div>
     </section>
-    <section class="discussion-ideas">
+    <section class="discussion-ideas" id="contactUs">
         <div class="container">
             <div class="row">
                 <div class="discussion-ideas__title">
