--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
                 <div class="header-logo">
                     <img src="images/logo_2.svg?v=5" alt="">
                     <div class="contacts">
-                        +7 (495) 933 48 41
-                        <div>info@desnol.ru </div>
+                        <a href="tel:+7 (495) 933 48 41">+7 (495) 933 48 41</a>
+                        <div><a href="mailto:info@desnol.ru">info@desnol.ru</a></div>
                     </div>
                 </div>
                 <nav class="main-nav">
@@ -485,7 +485,10 @@
         <div class="container">
             <div class="row">
                 <div class="footer__txt">
-                    ДЕСНОЛ СОФТ<br> г. Москва, Большой Казенный пер., 1/2, стр. 1, оф. 6<br> +7 (495) 933-48-41<br> ​info@desnol.ru
+                    ДЕСНОЛ СОФТ
+                    г. Москва, Большой Казенный пер., 1/2, стр. 1, оф. 6
+                    <a href="" tel="tel:+7 (495) 933-48-41">+7 (495) 933-48-41</a>
+                    <a href="mailto:​info@desnol.ru">​info@desnol.ru</a>
                     <br>
                 </div>
             </div>
