--- a/app/index.html
+++ b/app/index.html
@@ -485,11 +485,10 @@
         <div class="container">
             <div class="row">
                 <div class="footer__txt">
-                    ДЕСНОЛ СОФТ
-                    г. Москва, Большой Казенный пер., 1/2, стр. 1, оф. 6
-                    <a href="" tel="tel:+7 (495) 933-48-41">+7 (495) 933-48-41</a>
-                    <a href="mailto:​info@desnol.ru">​info@desnol.ru</a>
-                    <br>
+                    <div>ДЕСНОЛ СОФТ</div>            
+                    г. Москва, Большой Казенный пер., 1/2, стр. 1, оф. 6        
+                    <div><a href="" tel="tel:+7 (495) 933-48-41">+7 (495) 933-48-41</a></div>         
+                    <div><a href="mailto:​info@desnol.ru">​info@desnol.ru</a></div>           
                 </div>
             </div>
         </div>
