--- a/app/index.html
+++ b/app/index.html
@@ -476,7 +476,7 @@
             </div>
             <div class="row center-block">
                 <a href="" class="discussion-ideas btn" data-toggle="modal" data-target="#free-consultation">
-                    поможем воплотить бизнес идею
+                    поможем воплотить&nbsp;бизнес идею
                 </a>
             </div>
         </div>
