--- a/app/index.html
+++ b/app/index.html
@@ -63,24 +63,24 @@
                             <div class="flexslider slider-1 center-block">
                                 <ul class="slides center-block text-center">
                                     <li>
-                                        <img src="images/slide1.png" class="img-responsive"/>
-                                        <div class="flex-caption">
+                                        <img src="images/slide1.jpg" class="img-responsive"/>
+                                        <div class="flex-caption flex-caption--mod">
                                             Есть идея? Запустите мобильное приложение и 
                                             <div class="warning">заработайте на своем стартапе </div>
                                             уже сегодня!
                                         </div>
                                     </li>
                                     <li>
-                                        <img src="images/slide2.png" class="img-responsive"/>
-                                        <div class="flex-caption clr-black">
+                                        <img src="images/slide2.jpg" class="img-responsive"/>
+                                        <div class="flex-caption clr-black flex-caption--mod">
                                             <div class="warning "> ваш клиент у вас в руках</div>
                                             <div>если он держит в своих руках </div>
                                             мобильное устройство с Вашим приложением!
                                         </div>
                                     </li>
                                     <li>
-                                        <img src="images/slide3.png" class="img-responsive"/>
-                                        <div class="flex-caption  clr-black">
+                                        <img src="images/slide3.jpg" class="img-responsive"/>
+                                        <div class="flex-caption clr-black  flex-caption--mod">
                                             Мобильное приложение открывает 
                                            <div class="warning"> неограниченные возможности для развития </div>
                                             бизнеса, связи с клиентами и пользователями
@@ -149,46 +149,46 @@
                         <div class="flexslider slider-2">
                             <ul class="slides">
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
                                         <img src="images/robot.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
+                                    <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <div class="slider2__item--bold">...Уменьшайте</div>
                                         Ваши расходы за счет автоматизации<br> бизнес-процессов
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
                                         <img src="images/robot2.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
+                                    <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Управляйте</span> данными с любой<br>
                                         точке мира
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
                                         <img src="images/robot3.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
+                                    <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Повышайте</span>
                                         эффективность<br> труда Ваших сотрудников
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
                                         <img src="images/robot4.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
+                                    <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Ускоряйте</span>
                                         принятие<br> управленческих решений
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
                                         <img src="images/robot5.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
+                                    <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Увеличивайте</span>
                                         прибыльность<br> Вашего бизнеса за счет<br> доступности клиентов
                                     </div>
@@ -326,7 +326,7 @@
                         <input name="emailGuest" type="email" placeholder="E-mail" required><br>
                         <input name="phoneGuest" type="text"  placeholder="Телефон" minlength="6" pattern="\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{2}\s[0-9]{2}"required><br>
                         <textarea name="msgTask" placeholder="Краткая постановка задачи/вопрос" required></textarea><br>
-                        <input class="btn" type="submit">
+                        <input class="btn" type="submit" value="отправить заявку">
                     </form>
                 </div>
             </div>
@@ -340,7 +340,7 @@
             <div class="send-msg__items">
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send1.png" alt="">
+                        <img src="images/send1.svg?v=1" alt="">
                     </div>
                     <div class="send-msg__item--txt">
                         Мы получаем заявку и проводим с Вами бесплатную консультацию
@@ -348,7 +348,7 @@
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send2.png" alt="">
+                        <img src="images/send2.svg?v=1" alt="">
                     </div>
                     <div class="send-msg__item--txt">
                         Погружаемся в Ваш бизнес и помогаем сформировать технические требования к разработке
@@ -356,7 +356,7 @@
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send3.png" alt="">
+                        <img src="images/send3.svg?v=1" alt="">
                     </div>
                     <div class="send-msg__item--txt">
                         Проектируем мобильное приложение для решения Ваших бизнес-задач
@@ -364,7 +364,7 @@
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send4.png" alt="">
+                        <img src="images/send4.svg?v=1" alt="">
                     </div>
                     <div class="send-msg__item--txt">
                         Делаем дизайн — простой, понятный и удобный
@@ -372,7 +372,7 @@
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send5.png" alt="">
+                        <img src="images/send5.svg?v=1" alt="">
                     </div>
                     <div class="send-msg__item--txt">
                         Тестируем — проводим для Вас полную проверку приложения
