--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,7 @@
                             <ul class="slides">
                                 <li class="slider2__item">
                                     <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" />
+                                        <img src="images/robot1.jpg" class="img-responsive"/>
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <div class="slider2__item--bold">...Уменьшайте</div>
@@ -159,7 +159,7 @@
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot2.png" />
+                                        <img src="images/robot2.jpg" class="img-responsive"/>
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Управляйте</span> данными с любой<br>
@@ -168,7 +168,7 @@
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot3.png" />
+                                        <img src="images/robot3.jpg" class="img-responsive"/>
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Повышайте</span>
@@ -177,7 +177,7 @@
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot4.png" />
+                                        <img src="images/robot4.jpg" class="img-responsive"/>
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Ускоряйте</span>
@@ -186,7 +186,7 @@
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-5 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot5.png" />
+                                        <img src="images/robot5.jpg" class="img-responsive"/>
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
                                         <span class="slider2__item--bold">...Увеличивайте</span>
@@ -476,7 +476,7 @@
             </div>
             <div class="row center-block">
                 <a href="" class="discussion-ideas btn" data-toggle="modal" data-target="#free-consultation">
-                    поможем воплотить&nbsp;бизнес идею
+                    поможем воплотить&nbsp;бизнес-идею
                 </a>
             </div>
         </div>
