--- a/app/index.html
+++ b/app/index.html
@@ -309,7 +309,7 @@
                     <img src="images/possibilities-app12.jpg" alt="">
                 </div>
                 <div class="possibilities-app__item--txt">
-                    возможность сохранять настройки, упрощает работу
+                    возможность сохранять настройки упрощает работу
                 </div>
             </div>
         </div>
