--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Деснолсофт</title>
-    <link rel="stylesheet" href="css/libs.min.css?v=11">
-    <link rel="stylesheet" href="css/styles.css?v=1">
-    <script src="js/libs.min.js?v=7"></script>
-    <script src="js/common.js?v=77"></script>
+    <link rel="stylesheet" href="css/libs.min.css?v=9">
+    <link rel="stylesheet" href="css/styles.css?v=99">
+    <script src="js/libs.min.js?v=99"></script>
+    <script src="js/common.js?v=9"></script>
 </head>
 
 <body>
@@ -341,7 +341,9 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <input class="btn text-center" type="submit" value="отправить заявку">
+                                        <div class="col-md-12">
+                                            <input class="btn text-center" type="submit" value="отправить заявку">
+                                        </div>
                                     </div>
                                 </div>
                             </form>
