--- a/app/index.html
+++ b/app/index.html
@@ -127,24 +127,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="web-app-dev__plarform">
-                    <div class="web-app-dev__plarform--title title">разработка под все популярные платформы</div>
-                    <div class="web-app-dev__plarformItems center-block text-center">
-                        <div class="web-app-dev__plarformItem">
-                            <img src="images/apple.svg?v=5" alt="">
-                        </div>
-                        <div class="web-app-dev__plarformItem">
-                            <img src="images/android.svg?v=5" alt="">
-                        </div>
-                        <div class="web-app-dev__plarformItem">
-                            <img src="images/win.svg?v=5" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
+
     <section class="get-mob-app">
         <div class="container">
             <div class="row">
@@ -207,6 +192,28 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="web-app-dev__plarform">
+                    <div class="web-app-dev__plarform--title title">разработка под все популярные платформы</div>
+                    <div class="web-app-dev__plarformItems center-block text-center">
+                        <div class="web-app-dev__plarformItem">
+                            <img src="images/apple.svg?v=5" alt="">
+                        </div>
+                        <div class="web-app-dev__plarformItem">
+                            <img src="images/android.svg?v=5" alt="">
+                        </div>
+                        <div class="web-app-dev__plarformItem">
+                            <img src="images/win.svg?v=5" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="possibilities-app" id="yourOpportunities">
         <div class="container">
             <div class="row">
@@ -237,7 +244,7 @@
                     <img src="images/possibilities-app3.jpg" alt="">
                 </div>
                 <div class="possibilities-app__item--txt">
-                    настройка бизнес процессов и бизнес логики
+                    настройка бизнес-процессов и бизнес-логики
                 </div>
             </div>
             <div class="possibilities-app__item">
@@ -293,7 +300,7 @@
                     <img src="images/possibilities-app10.jpg" alt="">
                 </div>
                 <div class="possibilities-app__item--txt">
-                    быстрая загрузка удобная для пользователей
+                    быстрая загрузка, удобная для пользователей
                 </div>
             </div>
             <div class="possibilities-app__item">
@@ -301,7 +308,7 @@
                     <img src="images/possibilities-app11.jpg" alt="">
                 </div>
                 <div class="possibilities-app__item--txt">
-                    настройка оповещений и push и уведомлений
+                    настройка оповещений и push-уведомлений
                 </div>
             </div>
             <div class="possibilities-app__item">
@@ -540,7 +547,7 @@
                         </div>
                         <div class="free-consultation__item--response">
                             Ответим Вам <br>
-                            в течение 2 часов!
+                            в течение 30 минут!
                         </div>
                     </div>
                 </form>
