--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Деснолсофт</title>
-    <link rel="stylesheet" href="css/libs.min.css?v=9">
+    <link rel="stylesheet" href="css/libs.min.css?v=10">
     <link rel="stylesheet" href="css/styles.css?v=99">
     <script src="js/libs.min.js?v=99"></script>
     <script src="js/common.js?v=9"></script>
@@ -430,21 +430,21 @@
             <div class="row">
                 <div class="advantage__items col-md-12">
                     <div class="advantage__item col-md-4">
-                        <div class="advantage__item--top">17</div>
+                        <div class="advantage__item--top"><span class="counter-number">17</span></div>
                         <div class="advantage__item--middle">ЛЕТ</div>
                         <div class="advantage__item--bottom">
                             Опыт разработки программных продуктов и реализации проектов по внедрению
                         </div>
                     </div>
                     <div class="advantage__item col-md-4">
-                        <div class="advantage__item--top">70+</div>
+                        <div class="advantage__item--top"><span class="counter-number">70</span>+</div>
                         <div class="advantage__item--middle">ТАЛАНТЛИВЫХ СПЕЦИАЛИСТОВ</div>
                         <div class="advantage__item--bottom">
                             с опытом разработки сложных проектов для российских и зарубежных компаний
                         </div>
                     </div>
                     <div class="advantage__item col-md-3">
-                        <div class="advantage__item--top">300+</div>
+                        <div class="advantage__item--top"><span class="counter-number">300</span>+</div>
                         <div class="advantage__item--middle">УСПЕШНЫХ ПРОЕКТОВ</div>
                         <div class="advantage__item--bottom">
                             и довольных бизнес-клиентов
